Resources/Parsers/argus/argusParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/argus/argus.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import argusListener from './argusListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class argusParser extends antlr4.Parser {

    static grammarFileName = "argus.g4";
    static literalNames = [ null, "'='", "'equates'", "'end'", "'guardian'", 
                            "'is'", "','", "'handles'", "'recover'", "'background'", 
                            "'cluster'", "'rep'", "'proc'", "'iter'", "'creator'", 
                            "'handler'", "':'", "'type'", "'('", "')'", 
                            "'returns'", "'yields'", "'signals'", "'transmit'", 
                            "'where'", "'has'", "'in'", "'$'", "'stable'", 
                            "':='", "'own'", "'@'", "'.'", "'fork'", "'seize'", 
                            "'do'", "'pause'", "'terminate'", "'coenter'", 
                            "'abort'", "'leave'", "'while'", "'return'", 
                            "'yield'", "'signal'", "'exit'", "'break'", 
                            "'continue'", "'begin'", "'resignal'", "'except'", 
                            "'enter'", "'topaction'", "'action'", "'foreach'", 
                            "'process'", "'for'", "'if'", "'then'", "'elseif'", 
                            "'else'", "'tagcase'", "'others'", "'tagtest'", 
                            "'tagwait'", "'tag'", "'wtag'", "'when'", "'*'", 
                            "'null'", "'node'", "'bool'", "'int'", "'real'", 
                            "'char'", "'string'", "'any'", "'image'", "'cvt'", 
                            "'sequence'", "'['", "']'", "'array'", "'atomic_array'", 
                            "'struct'", "'record'", "'atomic_record'", "'oneof'", 
                            "'variant'", "'atomic_variant'", "'proctype'", 
                            "'itertype'", "'creatortype'", "'handlertype'", 
                            "'mutex'", "'with'", "'~'", "'\\u2212'", "'**'", 
                            "'//'", "'/'", "'||'", "'+'", "'<'", "'<='", 
                            "'>='", "'>'", "'~<'", "'~<='", "'~='", "'~>='", 
                            "'~>'", "'&'", "'cand'", "'|'", "'cor'", "'nil'", 
                            "'true'", "'false'", "'self'", "'bind'", "'up'", 
                            "'down'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, "INT_LITERAL", "REAL_LITERAL", 
                             "CHAR_LITERAL", "STRING_LITERAL", "IDENTIFIER", 
                             "COMMENT", "WS" ];
    static ruleNames = [ "file_", "module", "equates_", "guardian", "cluster", 
                         "operation", "routine", "procedure", "iterator", 
                         "creator", "handler", "routine_body", "parms", 
                         "parm", "args", "decl", "returnz", "yields", "signals", 
                         "exception_", "opidn", "where", "restriction", 
                         "type_set", "oper_decl", "constant", "state_decl", 
                         "equate", "own_var", "statement", "enter_stmt", 
                         "coarm", "armtag", "for_stmt", "if_stmt", "tagcase_stmt", 
                         "tagtest_stmt", "tagwait_stmt", "tag_arm", "atag_arm", 
                         "tag_kind", "when_handler", "others_handler", "body", 
                         "type_spec", "field_spec", "reference", "actual_parm", 
                         "type_actual", "opbinding", "expression", "primaries", 
                         "primary", "call", "entities", "entity", "field", 
                         "bind_arg", "name", "idn" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = argusParser.ruleNames;
        this.literalNames = argusParser.literalNames;
        this.symbolicNames = argusParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 29:
    	    		return this.statement_sempred(localctx, predIndex);
    	case 46:
    	    		return this.reference_sempred(localctx, predIndex);
    	case 50:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    statement_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		case 1:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    reference_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 3:
    			return this.precpred(this._ctx, 21);
    		case 4:
    			return this.precpred(this._ctx, 20);
    		case 5:
    			return this.precpred(this._ctx, 19);
    		case 6:
    			return this.precpred(this._ctx, 18);
    		case 7:
    			return this.precpred(this._ctx, 17);
    		case 8:
    			return this.precpred(this._ctx, 16);
    		case 9:
    			return this.precpred(this._ctx, 15);
    		case 10:
    			return this.precpred(this._ctx, 14);
    		case 11:
    			return this.precpred(this._ctx, 13);
    		case 12:
    			return this.precpred(this._ctx, 12);
    		case 13:
    			return this.precpred(this._ctx, 11);
    		case 14:
    			return this.precpred(this._ctx, 10);
    		case 15:
    			return this.precpred(this._ctx, 9);
    		case 16:
    			return this.precpred(this._ctx, 8);
    		case 17:
    			return this.precpred(this._ctx, 7);
    		case 18:
    			return this.precpred(this._ctx, 6);
    		case 19:
    			return this.precpred(this._ctx, 5);
    		case 20:
    			return this.precpred(this._ctx, 4);
    		case 21:
    			return this.precpred(this._ctx, 3);
    		case 22:
    			return this.precpred(this._ctx, 2);
    		case 23:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	file_() {
	    let localctx = new File_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, argusParser.RULE_file_);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.module();
	        this.state = 121;
	        this.match(argusParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	module() {
	    let localctx = new ModuleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, argusParser.RULE_module);
	    try {
	        this.state = 158;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 126;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 123;
	                    this.equate(); 
	                }
	                this.state = 128;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	            }

	            this.state = 129;
	            this.equates_();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 133;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 130;
	                    this.equate(); 
	                }
	                this.state = 135;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	            }

	            this.state = 136;
	            this.guardian();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 140;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 137;
	                    this.equate(); 
	                }
	                this.state = 142;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
	            }

	            this.state = 143;
	            this.procedure();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 147;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 144;
	                    this.equate(); 
	                }
	                this.state = 149;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	            }

	            this.state = 150;
	            this.iterator();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 154;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 151;
	                    this.equate(); 
	                }
	                this.state = 156;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	            }

	            this.state = 157;
	            this.cluster();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	equates_() {
	    let localctx = new Equates_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, argusParser.RULE_equates_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.idn();
	        this.state = 161;
	        this.match(argusParser.T__0);
	        this.state = 162;
	        this.match(argusParser.T__1);
	        this.state = 167;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        if(la_===1) {
	            this.state = 163;
	            this.parms();
	            this.state = 165;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===24) {
	                this.state = 164;
	                this.where();
	            }


	        }
	        this.state = 172;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===127) {
	            this.state = 169;
	            this.equate();
	            this.state = 174;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 175;
	        this.match(argusParser.T__2);
	        this.state = 176;
	        this.idn();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	guardian() {
	    let localctx = new GuardianContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, argusParser.RULE_guardian);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 178;
	        this.idn();
	        this.state = 179;
	        this.match(argusParser.T__0);
	        this.state = 180;
	        this.match(argusParser.T__3);
	        this.state = 182;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===127) {
	            this.state = 181;
	            this.parms();
	        }

	        this.state = 184;
	        this.match(argusParser.T__4);
	        this.state = 185;
	        this.idn();
	        this.state = 190;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 186;
	            this.match(argusParser.T__5);
	            this.state = 187;
	            this.idn();
	            this.state = 192;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 202;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===7) {
	            this.state = 193;
	            this.match(argusParser.T__6);
	            this.state = 194;
	            this.idn();
	            this.state = 199;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===6) {
	                this.state = 195;
	                this.match(argusParser.T__5);
	                this.state = 196;
	                this.idn();
	                this.state = 201;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 205;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===24) {
	            this.state = 204;
	            this.where();
	        }

	        this.state = 210;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 207;
	                this.equate(); 
	            }
	            this.state = 212;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	        }

	        this.state = 216;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 213;
	                this.state_decl(); 
	            }
	            this.state = 218;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	        }

	        this.state = 223;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===8) {
	            this.state = 219;
	            this.match(argusParser.T__7);
	            this.state = 220;
	            this.body();
	            this.state = 221;
	            this.match(argusParser.T__2);
	        }

	        this.state = 229;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===9) {
	            this.state = 225;
	            this.match(argusParser.T__8);
	            this.state = 226;
	            this.body();
	            this.state = 227;
	            this.match(argusParser.T__2);
	        }

	        this.state = 234;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,18,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 231;
	                this.operation(); 
	            }
	            this.state = 236;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,18,this._ctx);
	        }

	        this.state = 237;
	        this.creator();
	        this.state = 241;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===127) {
	            this.state = 238;
	            this.operation();
	            this.state = 243;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 244;
	        this.match(argusParser.T__2);
	        this.state = 245;
	        this.idn();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cluster() {
	    let localctx = new ClusterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, argusParser.RULE_cluster);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 247;
	        this.idn();
	        this.state = 248;
	        this.match(argusParser.T__0);
	        this.state = 249;
	        this.match(argusParser.T__9);
	        this.state = 251;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===127) {
	            this.state = 250;
	            this.parms();
	        }

	        this.state = 253;
	        this.match(argusParser.T__4);
	        this.state = 254;
	        this.opidn();
	        this.state = 259;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,21,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 255;
	                this.match(argusParser.T__5);
	                this.state = 256;
	                this.opidn(); 
	            }
	            this.state = 261;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,21,this._ctx);
	        }

	        this.state = 263;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===24) {
	            this.state = 262;
	            this.where();
	        }

	        this.state = 268;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===127) {
	            this.state = 265;
	            this.equate();
	            this.state = 270;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 271;
	        this.match(argusParser.T__10);
	        this.state = 272;
	        this.match(argusParser.T__0);
	        this.state = 273;
	        this.type_spec();
	        this.state = 277;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,24,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 274;
	                this.equate(); 
	            }
	            this.state = 279;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,24,this._ctx);
	        }

	        this.state = 283;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===30) {
	            this.state = 280;
	            this.own_var();
	            this.state = 285;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 286;
	        this.routine();
	        this.state = 290;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===127) {
	            this.state = 287;
	            this.routine();
	            this.state = 292;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 293;
	        this.match(argusParser.T__2);
	        this.state = 294;
	        this.idn();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operation() {
	    let localctx = new OperationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, argusParser.RULE_operation);
	    try {
	        this.state = 299;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,27,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 296;
	            this.creator();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 297;
	            this.handler();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 298;
	            this.routine();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	routine() {
	    let localctx = new RoutineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, argusParser.RULE_routine);
	    try {
	        this.state = 303;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,28,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 301;
	            this.procedure();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 302;
	            this.iterator();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	procedure() {
	    let localctx = new ProcedureContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, argusParser.RULE_procedure);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 305;
	        this.idn();
	        this.state = 306;
	        this.match(argusParser.T__0);
	        this.state = 307;
	        this.match(argusParser.T__11);
	        this.state = 309;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===127) {
	            this.state = 308;
	            this.parms();
	        }

	        this.state = 311;
	        this.args();
	        this.state = 313;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 312;
	            this.returnz();
	        }

	        this.state = 316;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===22) {
	            this.state = 315;
	            this.signals();
	        }

	        this.state = 319;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===24) {
	            this.state = 318;
	            this.where();
	        }
